syntax = "proto3";

package user.v1;

option go_package = "github.com/Shu-Tanabe/next-connect/go/internal-api/pb/user/v1;userv1";

import "google/protobuf/empty.proto";

service UserService {
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc GetUser(GetUserRequest) returns (User);
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

message User {
  string id = 1;
  string user_name = 2;
  string email = 3;
  string description = 4;
  string created_at = 5;
}

message ListUsersRequest {
  optional int32 page_size = 1;
  optional string page_token = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  optional string next_page_token = 2;
}

message GetUserRequest {
  string id = 1;
}

message CreateUserRequest {
  string id = 1;
  string user_name = 2;
  string email = 3;
  string description = 4;
}

message UpdateUserRequest {
  string id = 1;
  optional string user_name = 2;
  optional string email = 3;
  optional string description = 4;
}

message DeleteUserRequest {
  string id = 1;
}
